# k8055mqtt

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
MacOSX Kernel Extension/: Info.plist  install.sh
macosx/English.lproj/: InfoPlist.strings
macosx/k8055.xcodeproj/: project.pbxproj
src/: Makefile.am  k8055.c  k8055.h  k8055httpd.c  k8055mqtt.c  test_k8055.c
src/redhttp/: Makefile.am  headers.c
